increase z-index of popup form classes to ensure they are the topmost layer

--- a/frontend/src/styles/forms.css
+++ b/frontend/src/styles/forms.css
@@ -36,13 +36,13 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 99000;
   background: rgba(0, 0, 0, 0.1);
 }
 
 .popup-form {
   position: fixed;
-  z-index: 2000;
+  z-index: 99999;
   top: 5rem;
   left: 50%;
   margin-left: -6.5rem;
